--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
+    "better-auth": "^1.4.9",
     "joi": "^18.0.2",
     "lucide-react": "^0.562.0",
     "react": "^19.2.0",
