feat: Implement `better-auth` for authentication, add a cron job, and initialize the Express server with basic routes and middleware.

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "better-auth": "^1.4.9",
     "cloudinary": "^2.8.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "cron": "^4.4.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "joi": "^18.0.2",
